doc/docs-all-in-one.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docserver2
  name: docserver2
spec:
  ports:
  - port: 8000
  selector:
    app: docserver2
  type: NodePort
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: docserver2
spec:
  selector:
    matchLabels:
      app: docserver2 # Label selector that determines which Pods belong to the StatefulSet
                 # Must match spec: template: metadata: labels
  serviceName: "docserver2"
  replicas: 1
  template:
    metadata:
      labels:
        app: docserver2 # Pod template's label selector
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: skia-docs-key
      terminationGracePeriodSeconds: 10
      containers:
      - name: docserver2
        image: gcr.io/skia-public/docserver:2018-04-11T15_32_27Z-jcgregorio-f62bd1cc0b52ee07d9911f0af003c47192deb8a9-dirty
        ports:
          - name: http
            containerPort: 8000
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        - name: docserver2-storage
          mountPath: /mnt/pd0
  volumeClaimTemplates:
  - metadata:
      name: docserver2-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
