doc/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skiatest-org-central1
spec:
  backend:
    serviceName: web2
    servicePort: 8080
  rules:
    - host: docs.skiatest.org
      http:
        paths:
        - backend:
            serviceName: docs
            servicePort: 8000
    - host: web.skiatest.org
      http:
        paths:
        - backend:
            serviceName: web
            servicePort: 8080
